  tables ("saleslog", "item_master", "customer").
- Update TestDBSchemeForFMS.xlsx in "dist-docs" directory.
- Add the result of Hand-On Session 1 to Samples/Hands-on directory.
- In the 'send-mail' feature, the "subject-constant" and "body-constant" fields can contain the field reference
  as like "...@field@@...". These fields have to contain the result of context.
- [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
- [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
- [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
- [BUG FIX] Fix to disappear text and button name in the tag with data-im="_@update:..." or "_@addorder:...".
- [BUG FIX] The Auth_Manager sample in Auth_Support folder didn't work. So the UserList.php is removed.

Ver.5.6 (June 23, 2017)
- Well-designed CSS files as the 'default' theme are added by Hiroko Oki. She is web designer and a lecturer of
  Kyoto University of Art and Design.
- [CAUTION!] The default theme applies more CSS selectors than ever. If you don't want to apply new default theme
  to your solution, you could set the "theme" keyed value to "least." It doesn't apply any CSS settings without
  login panel and pagination control.
- Themes can be retrieved from accessing the definition file as below:
  def_file.php?theme=default&type=css&name=style.css
- The 'thosedays' theme are added for previous sample css style. The 'least' theme is just for pagination,
  login panel and so on, it means least definitions css.
- Officially support MariaDB.
- Update Vagrantfile, deploy.sh, dbupdate.sh, recipe.rb and sample_spec.rb for changing OS of 
  INTER-Mediator-Server VM to reduce size of the VM file. Now the OS of INTER-Mediator-Server VM is
  Alpine Linux 3.6 (instead of Ubuntu Server 14.04) and MariaDB is running on the new VM.
- In the Post Only mode, radio buttons don't require to set the name attribute. The nodes having the