@@ -28,7 +28,7 @@ $dbPassword = 'password';
  */
 $dbServer = '127.0.0.1';
 $dbPort = '80';
-$dbDataType = 'FMPro12';
+//$dbDataType = 'FMPro12';
 $dbDatabase = 'TestDB';
 $dbProtocol = 'HTTP';
 
